update custom.css to display breadcrumbs icons as inline-block to fix the alignment issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -64,3 +64,6 @@ a[data-slot='wrapper']:hover {
   background-color: var(--wrapper-background-color-hover);
 }
 
+.breadcrumbs__link > svg {
+  display: inline-block;
+}
